--- a/module2_solution/CSS/style.css
+++ b/module2_solution/CSS/style.css
@@ -25,7 +25,10 @@ h2{
   text-align: center;
 
   width: 100px;
-  margin: 30px,20px,10px,10px;
+  margin-right: 10px;
+  margin-top: 50px;
+  margin-left: 10px;
+  margin-bottom: 10px;
   float: right;
   top: 0px;
   right: 0px;
