--- a/module2_solution/CSS/style.css
+++ b/module2_solution/CSS/style.css
@@ -26,7 +26,7 @@ h2{
   text-align: center;
 
   width: 100px;
-  margin-right: 0px;
+  margin-right: 5px;
   margin-top: 0px;
   margin-left: 0px;
   margin-bottom: 0px;
@@ -62,9 +62,9 @@ p {
   margin-top: 0px;
   margin-left: 0px;
   margin-bottom: 0px;
-  padding: 20px 10px 0px 10px;
+  padding: 25px 10px 10px 10px;
   font-family: "Comic Sans MS", Arial, Helvetica, sans-serif;
-  
+
   text-align: left;
   color: #000000;
   overflow: hidden;
@@ -72,7 +72,7 @@ p {
   z-index: -1000;
 
   top: -23px;
-  right: -10px;
+  right: -5px;
   bottom: -10px;
   clear: right;
 
@@ -92,8 +92,8 @@ p {
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: right;
-    padding: 0px 10px 0px 0px;
-    margin: 0px;
+    padding: 0px 10px 0px 10px;
+
     /*border: 1px solid green;*/
   }
   .col-lg-1 {
@@ -138,8 +138,8 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: right;
-    padding: 0px 10px 0px 0px;
-    margin: 0px;
+    padding: 0px 10px 0px 10px;
+
     /*border: 1px solid green;*/
   }
   .col-md-1 {
@@ -176,6 +176,52 @@ p {
     width: 91.66%;
   }
   .col-md-12 {
+    width: 100%;
+  }
+}
+/********** Small devices only **********/
+@media (max-width: 767px) {
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+    float: right;
+    padding: 0px 10px 0px 10px;
+
+
+  }
+
+  .col-sm-1 {
+    width: 8.33%;
+  }
+  .col-sm-2 {
+    width: 16.66%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-4 {
+    width: 33.33%;
+  }
+  .col-sm-5 {
+    width: 41.66%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-7 {
+    width: 58.33%;
+  }
+  .col-sm-8 {
+    width: 66.66%;
+  }
+  .col-sm-9 {
+    width: 74.99%;
+  }
+  .col-sm-10 {
+    width: 83.33%;
+  }
+  .col-sm-11 {
+    width: 91.66%;
+  }
+  .col-sm-12 {
     width: 100%;
   }
 }
